<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GGV</string>
    <string name="bold" tools:ignore="ReferenceType">@font/latobold</string>
    <string name="light" tools:ignore="ReferenceType">@font/latolight</string>
    <string name="regular" tools:ignore="ReferenceType">@font/latoregular</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">Start</string>
    <string name="close">Close</string>

    <string name="contact"><u>Contact Info</u></string>

    <string name="about_college">Welcome To Guru Ghasidas Vishwavidyalaya
A Central University established by the Central Universities Act 2009
Guru Ghasidas Vishwavidyalaya, is a Central University of India, located in Bilaspur C.G. State, established under Central Universities Act 2009, No. 25 of 2009. Formerly called Guru Ghasidas University (GGU), established by an Act of the State Legislative Assembly, was formally inaugurated on June 16, 1983.</string>

    <string name="about"><u>Welcome to Guru Ghasidas Vishwavidyalaya </u> </string>

    <string name="about_section">Guru Ghasidas Vishwavidyalaya, is a Central University of India, located in Bilaspur C.G. State, established under Central Universities Act 2009,No. 25 of 2009.Formerly called Guru Ghasidas University (GGU),established by an Act of the State Legislative Assembly, was formallyinaugurated on June 16, 1983.\n\nGGU is an active member of the Association of Indian Universities and Association of Commonwealth Universities. Situated in a socially andeconomically challenged area, the university isappropriately named tohonor the great Satnami Saint Guru Ghasidas (born in 17th century)who championed the cause of the downtrodden and waged arelentless struggle againstall forms of social evils and injustice prevailing in the society.\nThe University is a residential Institution.</string>
    <string name="links"><u>Important Links</u></string>
    <string name="qlinks"><u>Quick Links</u></string>

    <string name="chan1">Please accept best wishes from me in the 125th year of Swami Vivekananda\'s historical Chicago - Speech. Swami has asked us to pay due attention to Dharma, as much attention as much as to Mukti. He has asked us, in other words, to take unattached interest in the worldly affairs. Universities in India are therefore expected to impart education conducive to imbibe significance of unattached involvement in worldly affairs. I am sure that all of you are doing full justice to this expectation.</string>
    <string name="chan2">We, the members of the family of Guru Ghasidas Vishwavidyalaya must carry forward and enrich the sacred legacy of Swami Vivekananda.</string>
    <string name="chan3">Nothing more to pen.</string>

    <string name="vchan1">I feel immense pleasure and a sense of responsibility on being appointed as the Vice-Chancellor of this temple of learning named after the great saint, Baba Guru Ghasidasji, who descended on the pious land of Chhattisgarh. Guru Ghasidas Central University is the Central University of Chhattisgarh which bears the important charge of providing job-oriented education, taking care of the educational aspirations, dissemination of quality education and enlightenment of the people of local society and remote areas. We shall make efforts in a comprehensive manner to grow this University, named after the great saint Baba Guru Ghasidasji, like a banyan tree of higher learning at national and international level.</string>
    <string name="vchan2">I communicate, at the start of the new academic session 2021-2022, my best wishes to all the teachers, officers, employees, research scholars, and students of the university. There are prospects, opportunities, and aims available for us, by pursuing which we will stand at par with the leading universities of the country. Infrastructure development along with improvement in academic quality, and development of new dimensions of research and innovation are the foremost in our priorities.</string>
    <string name="vchan3">Smooth implementation of various ambitious plans of Government of India such as ‘Ek Bharat, Shrestha Bharat’, ‘Unnat Bharat Abhiyan’, National Service Scheme (NSS), National Cadet Corps (NCC), and ‘Swachata Abhiyan’ will be ensured. A new milestone will be established in the area of interdisciplinary research with 3 MV high-current pelletron accelerator project.</string>
    <string name="vchan4">A University is a place of global learning across all disciplines. Our Prime Minister, Shri Narendra Modi Ji, declared ‘National Education Policy-2020’ on 29th July, 2020, keeping in mind the holistic approach of education from the pre-primary to the post-graduate and research level. It is my firm opinion that ‘National Education Policy-2020’ will be a game changer for India at national and international level, leading to all kinds of social, economic, political and strategic growth. The entire nation is dedicated to implementing ‘NEP-2020’ in a complete manner. Our Prime Minister has addressed the nation and informed about the regress of the implementation of NEP-2020 on its anniversary day, 29th July 2021, for its effective follow-up.</string>
    <string name="about_itdepartment">The department has been conceived with the ambitious objectives of developing professional expertise and skilled manpower in Information Technology (IT) and related areas. This will contribute in enabling the country to exploit efficiently emerging opportunities, and meet economic challenges being thrown up by the rapid global IT revolution, which is influencing virtually every area of development and social activity. The syllabi and courseware are designed to be flexible and wide-ranging, incorporating the cutting edge as well as ensuring a firm grasp of core fundamentals. A modular course design, along with several opportunities for industry training, gives students the freedom to tailor their learning experience. The department is committed to establish facilities for education and training in the field of IT for students and faculty members. The alumni students of this department are performing well in different multinational companies (MNC\'s). Some of our students are performing well in the competitive exams of international/National repute like GRE, GATE, MATS etc.</string>
    <string name="vision">The department of Information Technology envisions creating groomed, technically competent and skilled intellectual IT professionals to meet the updated advanced challenges and requirement of the modern IT industry.</string>
    <string name="mission">• Offer high-quality undergraduate and post graduate programs in order to prepare our graduates to become leaders in their profession.\n• To provide need based quality training in the field of Information Technology.\n• To maintain state-of-the-art facilities and laboratories where students and faculty can enhance their understanding of technology.\n• To provide an atmosphere for students and faculty for continuous learning and research for the welfare of society</string>

    <string name="library">The Central Library was established on 26th Oct. 1984 as a part of the University to meet the academic needs and requirements of the students, teachers and research scholars. It is housed in a spacious building, having seating capacity of more than 500 at a time. Its collection comprises 1,52,033 books, 5258 e-books, 4567 back volumes of Indian/ Foreign scholarly journals and 1433 Ph.D. theses. Library uses SOUL 2.0 software for automation and to porvide RFID based services to its users. Free Internet and Wi-Fi facilities have been made available to the users inside the Library and campus to access e-resourcse. Reprography, Current awareness service (CAS) and Selective dissemination of information (SDI) were also made available on demand.</string>
    <string name="Cafeteria1">University has a cafeteria on the campus, near the administrative building.The canteen provides snacks, tea, coffee, cold drinks, etc. during office hours. It operates from 09 a.m. to 06 p.m. on all working days.  \n\n Canteen committee appointed by the University monitors the quality, rates and standard.</string>
    <string name="Cafeteria"><u>Cafeteria</u></string>
    <string name="sportss">Department of Physical Education was established in the year 1985 to provide quality education in the field of physical education. It is recognized by NCTE and has developed play grounds and exercise physiology lab. The department has a dedicated team of competent teachers and instructors to provide sport specific training and teaching assignment. The students of the department participate in several Inter University and All India University level sports competition every year. Department extends the opportunity to all the university students to participate in Inter–Faculty Tournament every year. The department has also started Ad–on course on six weeks certificate course in Yogic Science from 2016–17. The department organises health &amp; fitness welfare activities and sports tournaments for teaching and non- teaching staffs of the Universitytime to time.\n\nThe Department is committed to excellence in sports performance, teaching, research and community service in the fields of Physical Education and Sports by providing Quality Education and Congenial environment to students and staffs. The Department provides specialization in games Badminton, Kabaddi, Volleyball, Basketball, Football, Cricket, and Athletics. The department has accomplished the greatest achievement of students where 90% of students are recruited in Central Govt Institutions, State govt institutions, CGPSC, Indian Railways, Defence Services. The foremost aim of the department is to prepare ideal Physical Education teacher, trained in every aspects of life so that they are competent and versatile in dealing with future demands of the society.</string>
    <string name="sports"><u>Sports</u></string>
    <string name="Auditorium">One big Auditorium with a seating capacity of about 800 audiences is a venue for organizing various activities of University. It has been constructed near administrative block. The auditorium has a beautiful spacious hall with seating provision in the ground floor and balcony. University has conducted its convocations and several other cultural and academic events in this hall. The other big halls adjoining auditorium are used for state of the art science laboratories for honours and engineering students.</string>
</resources>