<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VCactivity">

    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Vice Chancellor"
                    android:textColor="#3877d1"
                    android:textSize="28dp" />
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Message"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/vchancellor"
                    />
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginRight="10dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yours,"
                        />
                    <TextView
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Prof. Alok Kumar Chakrawal"
                        />
                    <TextView
                        android:textSize="22dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vice Chancellor, GGV"
                        />
                </LinearLayout>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:background="#f0f0f0"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                app:cardElevation="7dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:paddingRight="6dp"
                    android:paddingLeft="6dp"
                    android:paddingTop="7dp"
                    android:fontFamily="@font/latolight"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/vchan1"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_width="match_parent"/>
                <TextView
                    android:paddingRight="6dp"
                    android:paddingLeft="6dp"
                    android:paddingTop="4dp"
                    android:fontFamily="@font/latolight"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/vchan2"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                     android:layout_width="match_parent"/>
                    <TextView
                        android:paddingRight="6dp"
                        android:paddingLeft="6dp"
                        android:paddingTop="4dp"
                        android:fontFamily="@font/latolight"
                        android:background="@color/white"
                        android:layout_height="wrap_content"
                        android:text="@string/vchan3"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:layout_width="match_parent"/>
                    <TextView
                        android:paddingBottom="7dp"
                        android:paddingRight="6dp"
                        android:paddingLeft="6dp"
                        android:paddingTop="4dp"
                        android:fontFamily="@font/latolight"
                        android:background="@color/white"
                        android:layout_height="wrap_content"
                        android:text="@string/vchan4"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:layout_width="match_parent"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="GGV, BILASPUR, CHATTISGARH"/>



        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>